# quokka

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  run-tests.pbs
src/: .clang-tidy  AdvectionSimulation.hpp  CMakeLists.txt  Make.package  QuokkaSimulation.hpp  RadhydroSimulation.hpp  fextract.cpp  hyperbolic_system.hpp  linear_advection.hpp  physics_info.hpp  simulation.hpp  test_advection.cpp  test_advection.hpp  test_advection2d.cpp  test_advection_semiellipse.cpp  test_hydro2d_blast.cpp  test_hydro2d_kh.cpp  test_hydro2d_rm.cpp  test_hydro3d_blast.cpp  test_hydro_contact.cpp  test_hydro_wave.cpp  test_radhydro_shock_cgs.cpp  test_radiation_SuOlson.cpp  test_radiation_beam.cpp  test_radiation_box.cpp  test_radiation_marshak_cgs.cpp  test_radiation_matter_coupling.cpp  test_radiation_shadow.cpp  test_radiation_tophat.cpp
src/PopIII_NoMicrophysics/: CMakeLists.txt  popiii_nomicrophysics.cpp  popiii_nomicrophysics.hpp
src/cooling/: GrackleLikeCooling.hpp  TabulatedCooling.hpp
src/hydro/: EOS.hpp  HydroState.hpp  NSCBC_inflow.hpp  NSCBC_outflow.hpp
src/io/: projection.cpp  projection.hpp
src/linear_advection/: AdvectionSimulation.hpp
src/math/: Interpolate2D.hpp  ODEIntegrate.hpp
src/problems/Advection/: test_advection.cpp
src/problems/Advection2D/: test_advection2d.cpp
src/problems/AdvectionSemiellipse/: test_advection_semiellipse.cpp
src/problems/BinaryOrbitCIC/: binary_orbit.cpp  particle_orbit_plot.py
src/problems/Cooling/: test_cooling.cpp
src/problems/FCQuantities/: test_fc_quantities.cpp
src/problems/HydroBlast2D/: test_hydro2d_blast.cpp
src/problems/HydroBlast3D/: test_hydro3d_blast.cpp
src/problems/HydroContact/: test_hydro_contact.cpp
src/problems/HydroHighMach/: test_hydro_highmach.cpp
src/problems/HydroKelvinHelmholz/: test_hydro2d_kh.cpp
src/problems/HydroLeblanc/: test_hydro_leblanc.cpp
src/problems/HydroQuirk/: test_quirk.cpp
src/problems/HydroRichtmeyerMeshkov/: test_hydro2d_rm.cpp
src/problems/HydroSMS/: test_hydro_sms.cpp
src/problems/HydroShocktube/: test_hydro_shocktube.cpp
src/problems/HydroShocktubeCMA/: test_hydro_shocktube_cma.cpp
src/problems/HydroShuOsher/: test_hydro_shuosher.cpp
src/problems/HydroVacuum/: test_hydro_vacuum.cpp
src/problems/HydroWave/: test_hydro_wave.cpp
src/problems/NSCBC/: channel.cpp  vortex.cpp
src/problems/ODEIntegration/: test_ode.cpp
src/problems/PassiveScalar/: test_scalars.cpp
src/problems/PopIII/: popiii.cpp
src/problems/PrimordialChem/: test_primordial_chem.cpp
src/problems/RadBeam/: test_radiation_beam.cpp
src/problems/RadDust/: test_rad_dust.cpp
src/problems/RadDustMG/: test_rad_dust_MG.cpp
src/problems/RadForce/: test_radiation_force.cpp
src/problems/RadLineCooling/: test_rad_line_cooling.cpp
src/problems/RadLineCoolingMG/: test_rad_line_cooling_MG.cpp
src/problems/RadMarshak/: test_radiation_marshak.cpp
src/problems/RadMarshakAsymptotic/: test_radiation_marshak_asymptotic.cpp
src/problems/RadMarshakCGS/: test_radiation_marshak_cgs.cpp
src/problems/RadMarshakDust/: test_radiation_marshak_dust.cpp
src/problems/RadMarshakDustPE/: test_radiation_marshak_dust_and_PE.cpp
src/problems/RadMarshakVaytet/: test_radiation_marshak_Vaytet.cpp
src/problems/RadMatterCoupling/: test_radiation_matter_coupling.cpp
src/problems/RadMatterCouplingRSLA/: test_radiation_matter_coupling_rsla.cpp
src/problems/RadPulse/: test_radiation_pulse.cpp
src/problems/RadShadow/: test_radiation_shadow.cpp
src/problems/RadStreaming/: test_radiation_streaming.cpp
src/problems/RadStreamingY/: test_radiation_streaming_y.cpp
src/problems/RadSuOlson/: test_radiation_SuOlson.cpp
src/problems/RadTophat/: test_radiation_tophat.cpp
src/problems/RadTube/: test_radiation_tube.cpp
src/problems/RadhydroBB/: test_radhydro_bb.cpp
src/problems/RadhydroPulse/: test_radhydro_pulse.cpp
src/problems/RadhydroPulseDyn/: test_radhydro_pulse_dyn.cpp
src/problems/RadhydroPulseGrey/: test_radhydro_pulse_grey.cpp
src/problems/RadhydroPulseMGconst/: test_radhydro_pulse_MG_const_kappa.cpp
src/problems/RadhydroPulseMGint/: test_radhydro_pulse_MG_int.cpp
src/problems/RadhydroShell/: CMakeLists.txt  test_radhydro_shell.cpp
src/problems/RandomBlast/: blast.cpp
src/radiation/: radiation_dust_system.hpp  radiation_system.hpp
(+46 files in other folders)
